# ooptdd-loop

./: .gitignore  AGENT_LOOP.md  CITATION.cff  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
PROVENANCE/: priority-20260715.manifest  priority-20260715.manifest.ots
docs/: GIT_LOGGING.md  HARNESS_INTEGRATION.md  OMD_BRIDGE.md  OSS_INTAKE.md
example/: logging_app.py  logserver_pilot.py  ontology.yaml  pytest_logserver_xdist_app.py  requirements.yaml  requirements_local_capture.yaml  requirements_logserver_mcp.yaml  requirements_ontology.yaml  requirements_ooptdd.yaml  requirements_pytest_logserver_xdist.yaml  requirements_selectors.yaml  requirements_unmet.yaml  shop.py  test_pytest_logserver_xdist.py
example_oo/: requirements.yaml  ship_pipeline.py
ooptdd_loop/: __init__.py  charge_coverage.py  cli.py  git_hooks.py  golden.py  harness.py  kg.py  kg_seed.py  local_capture.py  log_mcp.py  longinus.py  mcp_config.py  mcp_server.py  omd_bridge.py  oo_rca.py  otel.py  pytest_plugin.py  report.py  rules.py  runner.py  selector_gates.py  spec.py  tools.py  watch.py
ooptdd_loop/domain/: __init__.py  spec.py
ooptdd_loop/engine/: __init__.py  longinus.py  selector_gates.py
scripts/: clean_install_smoke.sh  mcp_stdio_smoke.py  real_backend_xdist_otel_pilot.sh  verify_ooptdd.sh
tests/: test_architecture.py  test_charge_coverage.py  test_cli_harness.py  test_fixpoint_loop.py  test_forgery_closure_20260708.py  test_git_hooks.py  test_golden.py  test_harness_guards.py  test_kg.py  test_local_capture.py  test_log_mcp.py  test_logserver_pilot.py  test_longinus_ast_precision.py  test_longinus_callgraph.py  test_longinus_git_anchor.py  test_loop.py  test_loop_hardening.py  test_loop_repair_20260715.py  test_mcp_config.py  test_mcp_stdio.py  test_methodology_rules.py  test_omd_bridge.py  test_otel.py  test_property_fuzzing.py  test_pytest_plugin.py  test_selector_gates.py  test_semantic_rules.py  test_tools.py  test_watch.py
