[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ooptdd-loop"
version = "0.1.0"
description = "Agent-driven, positive-TDD requirements loop on top of ooptdd: develop until every requirement's expected log events ARRIVE in the store and bind to real source (Longinus). Built to catch AI hallucination."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "ooptdd>=0.1.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
kg = ["neo4j>=5.0"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
ooptdd-loop = "ooptdd_loop.cli:main"
ooptdd-loop-mcp = "ooptdd_loop.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["ooptdd_loop"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
