[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ooptdd-loop"
version = "0.1.0"
description = "Agent-driven, positive-TDD requirements loop on top of ooptdd: develop until every requirement's expected log events ARRIVE in the store and bind to real source (Longinus). Built to catch AI hallucination."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "ooptdd>=0.2.0",  # 0.2.0: queryable-capability silent-green fix + richer gate shapes (must_order/where)
  "PyYAML>=6.0",
]

[project.optional-dependencies]
kg = ["neo4j>=5.0"]
mcp = ["mcp>=1.0"]
otel = ["opentelemetry-api>=1.0"]
xdist = ["pytest-xdist>=3.0"]
charge = ["coverage>=7.0"]  # L6 execution-path (charge) coverage; OOPTDD_CHARGE_COVERAGE=1
dev = [
  "pytest>=7.0",
  "pytest-xdist>=3.0",
  "opentelemetry-sdk>=1.0",
  "ruff>=0.4",
  "hypothesis>=6.0",
  "coverage>=7.0",
]

[project.scripts]
ooptdd-loop = "ooptdd_loop.cli:main"
ooptdd-loop-mcp = "ooptdd_loop.mcp_server:main"

[project.entry-points.pytest11]
ooptdd_loop = "ooptdd_loop.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["ooptdd_loop"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
